@@ -21,6 +21,7 @@
             Fix E.decodeUTF8 when decoding UTF8 codes that contain all decimal digits
             Fix for potential buffer overrun if JSON.stringify used with strangely crafted whitespace arg (fix #2114)
             Add `NRF.setSecurity({encryptUart:true})` to force encrypted comms on BLE UART
+            Bangle.js2: Increase wait after power-on for BMP280 to fix getPressure on some devices (fix #2120)
 
      2v11 : Bangle.js: Enable the Bangle.on('tap') event from the accelerometer by default
             Bangle.js: revert to (better) Kionix default thresholds for tap detect
